--- a/ai-tools/mcp-cline.mdx
+++ b/ai-tools/mcp-cline.mdx
@@ -134,7 +134,7 @@ After adding the configuration and saving the file, you should see:
 
 - Your server name(s) appear in the MCP panel's "Installed" tab
 - A green indicator showing the server is connected
-- The `codebase.qna` tool available when using Cline
+- The `codebase-qna` tool available when using Cline
 
 ## Next Steps
 
