--- a/ai-tools/mcp-cursor.mdx
+++ b/ai-tools/mcp-cursor.mdx
@@ -131,7 +131,7 @@ After adding the configuration, you should see:
 
 - Your server name(s) appear in the MCP & Integrations panel
 - A green indicator showing the server is connected
-- The `codebase.qna` tool available when using Cursor's AI features
+- The `codebase-qna` tool available when using Cursor's AI features
 
 ## Next Steps
 
