--- a/ai-tools/mcp-gemini-cli.mdx
+++ b/ai-tools/mcp-gemini-cli.mdx
@@ -52,8 +52,9 @@ gemini mcp add \
 ## Verification
 
 After adding the configuration:
+
 - Run `gemini mcp list` to see your configured servers
-- The `codebase.qna` tool will be available in Gemini CLI
+- The `codebase-qna` tool will be available in Gemini CLI
 
 ## Management Commands
 
