--- a/ai-tools/mcp-roo-code.mdx
+++ b/ai-tools/mcp-roo-code.mdx
@@ -129,7 +129,7 @@ After adding the configuration:
 
 - Your server name(s) should appear in the MCP panel
 - You should see a green indicator showing the server is connected
-- The `codebase.qna` tool will be available when using Roo Code's AI features
+- The `codebase-qna` tool will be available when using Roo Code's AI features
 
 ## Next Steps
 
