--- a/ai-tools/mcp-kilo-code.mdx
+++ b/ai-tools/mcp-kilo-code.mdx
@@ -127,7 +127,7 @@ After adding the configuration:
 
 - Your server name(s) should appear in the MCP panel
 - You should see a green indicator showing the server is connected
-- The `codebase.qna` tool will be available when using Kilo Code's AI features
+- The `codebase-qna` tool will be available when using Kilo Code's AI features
 
 ## Next Steps
 
