codebases to repos

--- a/ai-tools/mcp-cline.mdx
+++ b/ai-tools/mcp-cline.mdx
@@ -61,8 +61,8 @@ To configure Sita for a single repository, add this to your `cline_mcp_settings.
 ```
 
 <Note>
-  Replace `YOUR_REPO_ID` with your repository ID. The repo id can be copied
-  from the codebases.
+  Replace `YOUR_REPO_ID` with your repository ID. The repo id can be copied from
+  repos tab.
 </Note>
 
 ## Multiple Repository Configuration
