--- a/ai-tools/mcp-gemini-cli.mdx
+++ b/ai-tools/mcp-gemini-cli.mdx
@@ -18,7 +18,7 @@ gemini mcp add \
   --header "x-repo-id: YOUR_REPO_ID"
 ```
 
-Replace `YOUR_REPO_ID` with your repository ID. The repo id can be copied from the codebases.
+Replace `YOUR_REPO_ID` with your repository ID. The repo id can be copied from repos tab.
 
 ### Multiple Repositories
 
