--- a/ai-tools/mcp-codex-cli.mdx
+++ b/ai-tools/mcp-codex-cli.mdx
@@ -60,8 +60,8 @@ env = { "NODE_ENV" = "production" }
 ```
 
 <Note>
-  Replace `YOUR_REPO_ID` with your repository ID. The repo id can be copied
-  from the codebases.
+  Replace `YOUR_REPO_ID` with your repository ID. The repo id can be copied from
+  repos tab.
 </Note>
 
 ## Multiple Repository Configuration
