--- a/ai-tools/mcp-cursor.mdx
+++ b/ai-tools/mcp-cursor.mdx
@@ -58,8 +58,8 @@ To configure Sita for a single repository, paste this configuration:
 ```
 
 <Note>
-  Replace `YOUR_REPO_ID` with your repository ID. The repo id can be copied
-  from the codebases.
+  Replace `YOUR_REPO_ID` with your repository ID. The repo id can be copied from
+  repos tab.
 </Note>
 
 ## Multiple Repository Configuration
